gojo section mobile scaling fix

--- a/assets/css/scaling.css
+++ b/assets/css/scaling.css
@@ -163,7 +163,7 @@
         min-width: 200px;
     }
     #gojo-img {
-        margin-top: 10%;
+        margin-top: 15%;
         margin-right: 0;
     }
     .description {
